# encrypt-o-matic

./: .gitignore  README.md  entry.py  pyproject.toml
src/encrypt_o_matic/: main.py  twofish.py
