[project]
name = "encrypt-o-matic"
version = "1.0.0"
description = "CLI tool that encrypts Windows executables"
requires-python = ">=3.12"
dependencies = [
    "pycryptodome>=3.20",
    "argon2-cffi>=23.1",
]

[project.optional-dependencies]
dev = ["pyinstaller"]

[project.scripts]
encrypt-o-matic = "encrypt_o_matic.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/encrypt_o_matic"]
